fix: use absolute asset paths for clean URL routing

--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
@@ -270,8 +270,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/data.js"></script>
-    <script src="js/article.js"></script>
+    <script src="/js/data.js"></script>
+    <script src="/js/article.js"></script>
 </body>
 
 </html>
