fix: complete audit remediation - 14 bugs fixed, vault page added
Bugs Fixed:
- BUG-01: Hamburger menu sidebar toggle (removed conflicting hidden class)
- BUG-02: TOOLS/REPORTS filter tabs now correctly categorize content
- BUG-03: Article page fetches from live API before falling back to static data
- BUG-04: Ticker data preserved (v1.1 enhancement)
- BUG-05: Pro routing changed to clean URL /pro
- BUG-06: Sidebar nav routes to /pro and /vault instead of toast messages
- BUG-07: Added footer to dashboard index.html
- BUG-08: Added back navigation link on article page
- BUG-09: Tailwind CDN kept (v1.1 refactor)
- BUG-10: Visual distinction between Articles, Tools, and Reports cards
- BUG-11: External backlinks (View Original) in all article content
- BUG-12: Brand color normalized to #F05A1A across all files
- BUG-13: Dynamic feed status with real count and timestamp
- BUG-14: Added Vercel rewrites for /pro and /vault

New Pages:
- vault.html: Saved signals page with localStorage persistence

Modified Files:
- index.html, article.html, pro.html, 404.html
- js/app.js, js/article.js, js/data.js
- vercel.json

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
       theme: {
         extend: {
           colors: {
-            "primary": "#f05a19",
+            "primary": "#F05A1A",
             "background-light": "#f8f6f6",
             "background-dark": "#0B1626",
           },
