--- a/pro.html
+++ b/pro.html
@@ -23,7 +23,7 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#f05a19",
+                        "primary": "#F05A1A",
                         "background-light": "#f8f6f6",
                         "background-dark": "#0B1626",
                         "card-dark": "#1A2639",
