feat: Dynamic media thumbnails and taxonomy overhaul\n\n- Updated navigation tabs to [ARTICLES] [TOOLS] [REPORTS]\n- Changed TOOLS badge to UPDATE\n- Integrated Tenor API in backend to fetch dynamic looping gifs/mp4s\n- Updated frontend card renderer to support background looping video tags

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                 </div>
                 <!-- Segmented Controller -->
                 <div class="flex p-1 bg-surface border border-border-navy rounded-lg w-full max-w-md">
-                    <button data-filter="ALL"
-                        class="flex-1 py-1.5 text-[11px] font-bold tracking-wider rounded bg-border-navy text-white">ALL</button>
+                    <button data-filter="ARTICLES"
+                        class="flex-1 py-1.5 text-[11px] font-bold tracking-wider rounded bg-border-navy text-white">ARTICLES</button>
                     <button data-filter="TOOLS"
                         class="flex-1 py-1.5 text-[11px] font-bold tracking-wider text-slate-500">TOOLS</button>
                     <button data-filter="REPORTS"
