feat: phase 3 data pipeline and source integrity\n\n- Expanded RSS feeds to include AdTech, SEO, Social, and Market Trends\n- Reduced cache duration for aggressive real-time fetching\n- Added explicit 'Original Source Intelligence' backlink to article viewer

--- a/article.html
+++ b/article.html
@@ -187,6 +187,23 @@
                 </div>
             </div>
 
+            <!-- Source Integrity Backlink -->
+            <div id="article-source-container" class="mt-12 pt-8 border-t border-border-muted hidden">
+                <div
+                    class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 bg-surface/50 p-6 rounded-xl border border-border-muted">
+                    <div>
+                        <h4 class="text-white font-bold tracking-wide uppercase text-sm mb-1">Original Source
+                            Intelligence</h4>
+                        <p class="text-slate-400 text-xs">Verify the core signal data directly from the reporting
+                            authority.</p>
+                    </div>
+                    <a id="article-source-link" href="#" target="_blank" rel="noopener noreferrer"
+                        class="shrink-0 inline-flex items-center gap-2 bg-transparent hover:bg-white/5 border border-white/20 text-white px-4 py-2 rounded-lg text-sm font-bold uppercase tracking-wider transition-colors">
+                        View Original <span class="material-icons text-sm">open_in_new</span>
+                    </a>
+                </div>
+            </div>
+
             <!-- Related Signals -->
             <section class="mt-16 md:mt-20 mb-12">
                 <div class="flex items-center justify-between mb-6">
